# agentEval

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  metadata.json  package-lock.json  pyproject.toml  tsconfig.json  vite.config.ts
backend/alembic/: env.py
backend/alembic/versions/: 20260413_01_init.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: agent.py  auth.py  dashboard.py  datasets.py  lab.py  runs.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  base.py  entities.py
backend/app/schemas/: __init__.py  agent.py  auth.py  dashboard.py  datasets.py  runs.py
backend/app/services/: __init__.py  agent_profiles.py  gemini_agent.py  presenters.py  run_executor.py  seed.py  tooling.py
backend/app/utils/: ids.py  serialization.py
docker/: postgres-init.sql
src/: App.tsx  index.css
src/api/: client.ts
src/components/: Layout.tsx  RequireAuth.tsx  Sidebar.tsx  TopBar.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useAuth.ts
src/pages/: Dashboard.tsx  Datasets.tsx  Lab.tsx  Login.tsx  Register.tsx  Tasks.tsx
src/types/: api.ts
tests/: conftest.py  test_api.py
